<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".HelpActivity">

    <FrameLayout
        android:id="@+id/txt_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       />
    <TextView
        android:id="@+id/txt_help1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_help"
        android:textStyle="normal"
        android:text="@string/judul"
        android:textSize="35dp"
        />
    <TextView
        android:id="@+id/txt_isi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_help1"
        android:textSize="20dp"
        android:textColor="@color/warna"
        android:text="@string/isi"/>
    <TextView
        android:id="@+id/help2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_isi"
        android:textSize="35dp"
        android:textStyle="normal"
        android:text="@string/judul1"/>
    <TextView
        android:id="@+id/txt_isi1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/help2"
        android:textSize="20dp"
        android:textColor="@color/warna"
        android:text="@string/isi1"/>
    <TextView
        android:id="@+id/help3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_isi1"
        android:textStyle="normal"
        android:textSize="35dp"
        android:text="@string/judul2"/>
    <TextView
        android:id="@+id/txt_isi3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/help3"
        android:textColor="@color/warna"
        android:textSize="20dp"
        android:text="@string/isi2"/>
    <TextView
        android:id="@+id/help4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_isi3"
        android:textSize="35dp"
        android:textStyle="normal"
        android:text="@string/judul3"/>
    <TextView
        android:id="@+id/txt_isi4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/help4"
        android:textSize="20dp"
        android:textColor="@color/warna"
        android:text="@string/isi3"/>




</RelativeLayout>